tests/snapshot/inputs/errors/nested_annotated_record_pattern_typecheck_fail.ncl
(
  let { x = { a : Number }} = { x = { a = "" }} in
  x
) : _